# DE1Simulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
pi-daemon/: de1-ble-daemon.cpp  de1-ble-daemon.pro  de1-ble-daemon.service  setup-pi.sh
